Name:                       tuntap
Synopsis:                   Interface to TUN/TAP drivers.
Description:                TUN/TAP is a virtual network adapter supported by
                            serveral operating systems.
Version:                    0.0.2.1
License:                    BSD3
License-File:               LICENSE
Author:                     John Van Enk <vanenkj@gmail.com>
Maintainer:                 John Van Enk <vanenkj@gmail.com>
Stability:                  experimental
Category:                   Network
Cabal-Version:              >= 1.6
Build-Type:                 Simple
Package-URL:                http://github.com/sw17ch/tuntap
Extra-Source-Files:         cbits/help.h

Library
    Build-Depends:          base >= 4 && < 5,
                            bytestring >= 0.9.1.4 && < 0.10
    Exposed-Modules:        Network.TUNTAP
    GHC-Options:            -Wall
    CC-Options:             -Wall
    HS-Source-Dirs:         src

    if os(mingw32)
        C-Sources:          cbits/help-win.c
        Extra-Libraries:    Iphlpapi, ws2_32
        CC-Options:         -D MINGW32
        CPP-Options:        -DCALLCONV=stdcall

    if os(linux)
        Build-Depends:      unix >= 2.3.0.0
        C-Sources:          cbits/help-linux.c
        CC-Options:         -D LINUX
        CPP-Options:        -DCALLCONV=ccall

    if os(darwin) || os(freebsd)
        Build-Depends:      unix >= 2.3.0.0
        C-Sources:          cbits/help-bsd.c
        CC-Options:         -D BSD
        CPP-Options:        -DCALLCONV=ccall
