Name:                       tuntap
Synopsis:                   Interface to TUN/TAP drivers.
Description:                TUN/TAP is a virtual network adapter supported by
                            serveral operating systems.
Version:                    0.0.2.1
License:                    BSD3
License-File:               LICENSE
Author:                     John Van Enk <vanenkj@gmail.com>
Maintainer:                 John Van Enk <vanenkj@gmail.com>
Stability:                  experimental
Category:                   Network
Cabal-Version:              >= 1.6
Build-Type:                 Simple
Package-URL:                http://github.com/sw17ch/tuntap

Library
    Build-Depends:          base >= 4 && < 5
    Exposed-Modules:        
    Extensions:             ForeignFunctionInterface,
                            FunctionalDependencies,
                            MultiParamTypeClasses
    Build-Tool:             greencard
    GHC-Options:            -Wall

    if !os(windows)
        Build-Depends:      unix
        Other-Modules:      System.Posix.IOCtl
        HS-Source-Dirs:     src-unix
